# re-cycle

./: Cargo.toml  Justfile  README.md  TODO.txt  build.rs  icon.rgba  index.html
src/: asset_embedding.rs  main.rs  score.rs  state.rs
src/level/: main_level.rs  mod.rs  timer.rs  trash.rs  trash_can.rs  trash_spawner.rs  types.rs
src/rendering/: camera.rs  mod.rs  types.rs
src/ui/: credits.rs  cursor.rs  fade_to_black.rs  game_over.rs  loading.rs  menu.rs  mod.rs  pause.rs  score.rs  splash.rs  types.rs
